JFoods: 02.23 - Configuring Spring Boot projects with application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.application.version=@project.version@
 spring.application.description=@project.description@
 spring.application.developer=Wybson Santana
 ########################################################################################################################
+
+server.port=8081
