JFoods: 02.25 - Creating and accessing custom properties with @Value

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.application.description=@project.description@
 spring.application.developer=Wybson Santana
 ########################################################################################################################
 
-server.port=8081
+notifier.email.server-host=smtp.s2w.dev.br
+notifier.email.server-port=25
