JFoods: 02.26 - Accessing properties with @ConfigurationProperties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.application.developer=Wybson Santana
 ########################################################################################################################
 
 notifier.email.server-host=smtp.s2w.dev.br
-notifier.email.server-port=25
+#notifier.email.server-port=28
