--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -5,4 +5,5 @@ spring.application.description=@project.description@
 spring.application.developer=Wybson Santana
 ########################################################################################################################
 
-spring.profiles.active=development
+notifier.email.server-host=smtp.s2w.local
+notifier.email.server-port=30
