--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -5,4 +5,5 @@ spring.application.description=@project.description@
 spring.application.developer=Wybson Santana
 ########################################################################################################################
 
-spring.profiles.active=development
+notifier.email.server-host=smtp.s2w.dev.br
+notifier.email.server-port=28
