--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.url=jdbc:mysql://localhost/jfoods?createDatabaseIfNotExist=tru
 spring.datasource.username=root
 spring.datasource.password=root
 ########################################################################################################################
+######################################################### JPA #########################################################
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+########################################################################################################################
