--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,5 @@ spring.datasource.password=root
 ######################################################### JPA #########################################################
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
 ########################################################################################################################
