--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,12 @@ spring.application.developer=Wybson Santana
 spring.datasource.url=jdbc:mysql://localhost/jfoods?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.idle-timeout=30000
 ########################################################################################################################
+
 ######################################################### JPA #########################################################
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
