--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 ####################################################### FlyWay ########################################################
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 ########################################################################################################################
+
+####################################################### Jackson ########################################################
+spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.deserialization.fail-on-ignored-properties=true
+########################################################################################################################
