--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,8 @@ spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.deserialization.fail-on-ignored-properties=true
 ########################################################################################################################
+
+####################################################### Web MVC ########################################################
+spring.web.resources.add-mappings=false
+spring.mvc.throw-exception-if-no-handler-found=true
+########################################################################################################################
