--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 ########################################################################################################################
 
 ####################################################### FlyWay ########################################################
-spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+spring.flyway.locations=classpath:db/migration,classpath:db/functional-testdata
 ########################################################################################################################
 
 ####################################################### Jackson ########################################################
